[tool.poetry]
name = "bchrpc"
version = "0.1.0"
description = ""
authors = ["Bryan Hann <largo@pobox.com>"]

[tool.poetry.scripts]
bchrpc = "bchrpc:main"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
